--- a/app/views/categories/year.html.erb
+++ b/app/views/categories/year.html.erb
@@ -8,16 +8,16 @@
       <%= link_to params[:model], category_model_path(params[:category], params[:model]) %>
       <%= link_to params[:year], category_year_path(params[:category], params[:model], params[:year]), class: "current" %>
     </nav>
-    
+
     <div class="content">
       <p>
         Available trims and images coming soon
       </p>
     </div>
   </div>
-  
+
   <div class="large-3 pull-9 columns">
-    <%= content_tag(:span, "", :class => "car_icon", :id => "#{params[:category].parameterize('_')}") %>
+    <%= content_tag(:span, "", :class => "car_icon", :id => "#{params[:category].parameterize(separator: '_')}") %>
     <%= render 'iihs_safety_rating/safety_rating' %>
   </div>
 </div>
