--- a/app/views/iihs_safety_rating/_safety_rating_name.html.erb
+++ b/app/views/iihs_safety_rating/_safety_rating_name.html.erb
@@ -1,7 +1,7 @@
 <% if rating_type.downcase == 'small overlap front: driver-side' %>
   Small overlap front: <span data-tooltip aria-haspopup='true' title='Driver Side Peformance'>DS</span>
 <% elsif rating_type.downcase == 'small overlap front: passenger-side' %>
-  Small overlap front: <span data-tooltip aria-haspopup='true' title='Passenger Side Peformance'>DS</span>
+  Small overlap front: <span data-tooltip aria-haspopup='true' title='Passenger Side Peformance'>PS</span>
 <% else %>
   <%= rating_type %>
 <% end %>
