--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -15,8 +15,8 @@
       <% end %>
     </div>
   </div>
-  
+
   <div class="large-3 pull-9 columns">
-    <%= content_tag(:span, "", :class => "car_icon", :id => "#{params[:category].parameterize('_')}") %>
+    <%= content_tag(:span, "", :class => "car_icon", :id => "#{params[:category].parameterize(separator: '_')}") %>
   </div>
 </div>
